Not sure if it's the best solution but this changes the following: - Enable plain filenames (without "file:" scheme) as URI. FOURIResolver tries to create a java.io.File to access the file. - If after removing the scheme from a file: URL the string still contains a ":" it is likely an absolute Windows path for which the user forgot to specify a leading "/", i.e.: file:C:/Temp/test.txt --> file:/C:/Temp/test.txt
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@278779 13f79535-47bb-0310-9956-ffa450edef68